fix_apiTest